コントローラーとビューの作成

--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -5,3 +5,5 @@
   <%= link_to '新規登録', new_user_registration_path, class: "sign-up" %>
   <%= link_to 'ログイン', new_user_session_path, class: "login" %>
 <% end %>
+
+<%= link_to 'インシデントを投稿する',new_incident_path %>
