--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -6,7 +6,7 @@
       <%= f.text_field :title %>
       <%= f.text_area :content %>
       <%= f.text_field :date %>
-      <%# <%= f.collection_select(:place_id, Place.all, :id, :name, {} %> %>
+      <%= f.collection_select(:place_id, Place.all, :id, :name, {}) %>
       <%= f.submit "投稿する" %>
     <% end %>
   </div>
