--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -2,6 +2,7 @@
   <div class="container">
     <h3>投稿する</h3>
     <%= form_with model: @incident, local: true do |f| %>
+    <%= render 'shared/error_messages', model: f.object %>
       <%= f.file_field :image %>
       <%= f.text_field :title %>
       <%= f.text_area :content %>
