--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -1,6 +1,8 @@
+<%= render "shared/header" %>
+
 <div class="contents row">
   <div class="container">
-    <h3>投稿する</h3>
+    <h3>インシデント投稿</h3>
     <%= form_with model: @incident, local: true do |f| %>
     <%= render 'shared/error_messages', model: f.object %>
       <%= f.file_field :image %>
