--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -1,13 +1,39 @@
 <%= render "shared/header" %>
 
+<div class="bg-light">
 <%= link_to 'インシデントを投稿する',new_incident_path %>
-
-<% @incidents.each do |incident| %>
-  <div>
-    <%= image_tag incident.image.variant(resize: '300x300') if incident.image.attached? %>
-    <%= incident.title %>
-    <%= incident.content %>
-    <%= incident.date %>
-    <%= incident.place.name%>
+  <div class="container">
+    <% @incidents.each do |incident| %>
+      <div class="card mb-3" >
+        <div class="row">
+          <div class="col-lg-3">
+            <%= image_tag incident.image.variant(resize: '250x250') if incident.image.attached? %>
+          </div>
+          <div class="col-lg-3">
+            <div class="card-body">
+              <div class="card-title">
+                <small class="text-muted">Title</small><br>
+                <%= incident.title %>
+              </div>
+              <div class="card-text">
+                <small class="text-muted">Content</small><br>
+                <%= incident.content %>
+              </div>
+              <div class="card-text">
+                <small class="text-muted">Date</small><br>
+                <%= incident.date %>
+              </div>
+              <div class="card-text">
+                <small class="text-muted">Place</small><br>
+                <%= incident.place.name %>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <%= image_tag "no_image.jpeg" %>
+          </div>
+        </div>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</div>
