一覧表示画面のデザイン

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,6 +6,7 @@
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
         <li><a href="/" class="nav-link px-2 text-white">Incident Log</a></li>
+        <li><a href="/incidents/new" class="nav-link px-2 text-white">Post a new incident</a></li>
         <li><a href="#" class="nav-link px-2 text-secondary">Features</a></li>
         <li><a href="#" class="nav-link px-2 text-secondary">Pricing</a></li>
         <li><a href="#" class="nav-link px-2 text-secondary">FAQs</a></li>
