--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -1,17 +1,19 @@
 <%= render "shared/header" %>
 
 <div class="bg-light">
-<%= link_to 'インシデントを投稿する',new_incident_path %>
   <div class="container">
     <% @incidents.each do |incident| %>
-      <div class="card mb-3" >
-        <div class="row">
-          <div class="col-lg-3">
-            <%= image_tag incident.image.variant(resize: '250x250') if incident.image.attached? %>
-          </div>
-          <div class="col-lg-3">
+      <div class="card my-3" >
+        <div class="row" >
+          <div class="col-lg-6 d-flex justify-content-center">
+            <% if incident.image.attached? %>
+              <%= image_tag incident.image, class:"image" %>
+            <% else %>
+              <%= image_tag "no_image.jpeg" , class:"image" %>
+            <% end %>
+
             <div class="card-body">
-              <div class="card-title">
+              <div class="card-text">
                 <small class="text-muted">Title</small><br>
                 <%= incident.title %>
               </div>
@@ -29,8 +31,23 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
-            <%= image_tag "no_image.jpeg" %>
+
+          <div class="col-lg-6 d-flex justify-content-center">
+            <%= image_tag "no_image.jpeg", class:"image" %>
+            <div class="card-body">
+               <div class="card-text">
+                <small class="text-muted">Content</small><br>
+                ---
+              </div>
+              <div class="card-text">
+                <small class="text-muted">Date</small><br>
+                ---
+              </div>
+              <div class="card-text">
+                <small class="text-muted">Cost</small><br>
+                ---
+              </div>
+            </div>
           </div>
         </div>
       </div>
