背景の設定

--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -1,9 +1,10 @@
-<%= render "shared/header" %>
+<div class="wallpaper">
 
-<div class="bg-light">
+  <%= render "shared/header" %>
+
   <div class="container">
     <% @incidents.each do |incident| %>
-      <div class="card my-3" >
+      <div class="card bg-light my-3" >
         <div class="row" >
           <div class="col-lg-6 d-flex justify-content-center">
             <% if incident.image.attached? %>
