--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,3 +7,23 @@
   width: 250px;
   height: 250px;
 }
+
+.wallpaper{
+  background-image: url("bgi.jpg");
+  background-position: center top;
+  background-size: cover;
+  background-attachment: fixed;
+  position: relative;
+  z-index: 1;
+}
+
+.wallpaper::after{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(128,128,128,0.5);
+  z-index: -1;
+}
