--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,3 +27,9 @@
   background-color: rgba(128,128,128,0.5);
   z-index: -1;
 }
+
+.hissu{
+  font-size: 5px;
+  padding: 1px;
+  margin-left: 7px;
+}
