--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -1,18 +1,36 @@
 <%= render "shared/header" %>
 
-<div class="form-post">
-  <div class="container">
-    <div class="row">
-      <h3>インシデント投稿</h3>
-      <%= form_with model: @incident, local: true do |f| %>
-      <%= render 'shared/error_messages', model: f.object %>
-        <%= f.file_field :image %>
-        <%= f.text_field :title %>
-        <%= f.text_area :content %>
-        <%= f.text_field :date %>
-        <%= f.collection_select(:place_id, Place.all, :id, :name, {}) %>
-        <%= f.submit "投稿する" %>
-      <% end %>
-    </div>
+<div class="container">
+  <div class="row col-lg-5 mx-auto">
+    <h2 class="mt-5 text-center">Post a new incident</h2>
+    <%= form_with model: @incident, local: true do |f| %>
+    <%= render 'shared/error_messages', model: f.object %>
+      <div class="my-3">
+        <%= f.label :image %><br />
+        <%= f.file_field :image, class:"form-control my-3" %>
+      </div>
+
+      <div class="my-3">
+        <%= f.label :title %><span class="text-white bg-danger hissu">必須</span><br/>
+        <%= f.text_field :title, autofocus: true, class:"form-control" %>
+      </div>
+
+      <div class="my-3">
+        <%= f.label :content %><span class="text-white bg-danger hissu">必須</span><br/>
+        <%= f.text_area :content, class:"form-control" %>
+      </div>
+
+      <div class="my-3">
+        <%= f.label :date %><span class="text-white bg-danger hissu">必須</span><br/>
+        <%= f.text_field :date, class:"form-control" %>
+      </div>
+
+      <div class="my-3">
+        <%= f.label :place %><span class="text-white bg-danger hissu">必須</span><br/>
+        <%= f.collection_select(:place_id, Place.all, :id, :name, {}, class:"form-select") %>
+      </div>
+
+      <button class="w-100 btn btn-lg btn-primary mt-4" type="submit">投稿する</button>
+    <% end %>
   </div>
 </div>
