--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -4,54 +4,57 @@
 
   <div class="container">
     <% @incidents.each do |incident| %>
-      <div class="card bg-light my-3" >
-        <div class="row" >
-          <div class="col-lg-6 d-flex justify-content-center">
-            <% if incident.image.attached? %>
-              <%= image_tag incident.image, class:"image" %>
-            <% else %>
-              <%= image_tag "no_image.jpeg" , class:"image" %>
-            <% end %>
+      <%= link_to incident_path(incident), class:"text-dark text-decoration-none" do %>
+        <div class="card bg-light my-3" >
+          <div class="row" >
+            <div class="col-lg-6 d-flex justify-content-center">
+              <% if incident.image.attached? %>
+                <%= image_tag incident.image, class:"image" %>
+              <% else %>
+                <%= image_tag "no_image.jpeg" , class:"image" %>
+              <% end %>
 
-            <div class="card-body">
-              <div class="card-text">
-                <small class="text-muted">Title</small><br>
-                <%= incident.title %>
-              </div>
-              <div class="card-text">
-                <small class="text-muted">Content</small><br>
-                <%= incident.content %>
-              </div>
-              <div class="card-text">
-                <small class="text-muted">Date</small><br>
-                <%= incident.date %>
-              </div>
-              <div class="card-text">
-                <small class="text-muted">Place</small><br>
-                <%= incident.place.name %>
+              <div class="card-body">
+                <div class="card-text">
+                  <small class="text-secondary">Title</small><br>
+                  <%= incident.title %>
+                </div>
+                <div class="card-text">
+                  <small class="text-secondary">Content</small><br>
+                  <%= incident.content %>
+                </div>
+                <div class="card-text">
+                  <small class="text-secondary">Date</small><br>
+                  <%= incident.date %>
+                </div>
+                <div class="card-text">
+                  <small class="text-secondary">Place</small><br>
+                  <%= incident.place.name %>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="col-lg-6 d-flex justify-content-center">
-            <%= image_tag "no_image.jpeg", class:"image" %>
-            <div class="card-body">
-               <div class="card-text">
-                <small class="text-muted">Content</small><br>
-                ---
-              </div>
-              <div class="card-text">
-                <small class="text-muted">Date</small><br>
-                ---
-              </div>
-              <div class="card-text">
-                <small class="text-muted">Cost</small><br>
-                ---
+            <div class="col-lg-6 d-flex justify-content-center">
+              <%= image_tag "no_image.jpeg", class:"image" %>
+              <div class="card-body">
+                <div class="card-text">
+                  <small class="text-secondary">Content</small><br>
+                  ---
+                </div>
+                <div class="card-text">
+                  <small class="text-secondary">Date</small><br>
+                  ---
+                </div>
+                <div class="card-text">
+                  <small class="text-secondary">Cost</small><br>
+                  ---
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
   </div>
+
 </div>
