--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,28 +8,24 @@
   height: 250px;
 }
 
-.wallpaper{
-  background-image: url("bgi.jpg");
+.image-show{
+  width: 500px;
+  height: 500px;
+}
+
+body{
+  background-image: url("bgi.jpeg");
   background-position: center top;
   background-size: cover;
   background-attachment: fixed;
-  position: relative;
-  z-index: 1;
-}
-
-.wallpaper::after{
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: rgba(128,128,128,0.5);
-  z-index: -1;
 }
 
 .hissu{
   font-size: 5px;
   padding: 1px;
   margin-left: 7px;
+}
+
+.form-title{
+  text-shadow: 3px 2px 1px gray;
 }
