--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,18 +2,18 @@
 
 <div class="container">
   <div class="row col-lg-5 mx-auto">
-    <h2 class="mt-5 text-center">Please sign up</h2>
+    <h2 class="mt-5 text-center form-title">Please sign up</h2>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="my-3">
         <%= f.label :name %><br/>
-        <%= f.text_field :name, autofocus: true, autocomplete: "name", class:"form-control" %>
+        <%= f.text_field :name, autofocus: true, autocomplete: "name", class:"form-control mt-1" %>
       </div>
 
       <div class="my-3">
         <%= f.label :email %><br/>
-        <%= f.email_field :email, autocomplete: "email", class:"form-control" %>
+        <%= f.email_field :email, autocomplete: "email", class:"form-control mt-1" %>
       </div>
 
       <div class="my-3">
@@ -21,12 +21,12 @@
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br/>
-        <%= f.password_field :password, autocomplete: "new-password", class:"form-control" %>
+        <%= f.password_field :password, autocomplete: "new-password", class:"form-control mt-1" %>
       </div>
 
       <div class="my-3">
         <%= f.label :password_confirmation %><br/>
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control" %>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control mt-1" %>
       </div>
 
       <button class="w-100 btn btn-lg btn-primary mt-4" type="submit">Sign up</button>
