--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,9 +3,9 @@
   height: 25px;
 }
 
-.image{
-  width: 250px;
-  height: 250px;
+.image-index{
+  width: 240px;
+  height: 240px;
 }
 
 .image-show{
@@ -16,7 +16,7 @@
 body{
   background-image: url("bgi.jpeg");
   background-position: center top;
-  background-size: cover;
+
   background-attachment: fixed;
 }
 
