--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -3,49 +3,61 @@
 <div class="container">
   <% @incidents.each do |incident| %>
     <%= link_to incident_path(incident), class:"text-dark text-decoration-none" do %>
-      <div class="card bg-light my-4" >
+      <div class="card bg-light my-3" >
         <div class="row" >
           <%# インシデント情報 %>
-          <div class="col-lg-6 d-flex justify-content-center">
-            <% if incident.image.attached? %>
-              <%= image_tag incident.image, class:"image" %>
-            <% else %>
-              <%= image_tag "no_image.jpeg" , class:"image" %>
-            <% end %>
-            <div class="card-body">
-              <div class="card-text">
-                <small class="text-secondary">Title</small><br>
-                <%= incident.title %>
+          <div class="col d-flex">
+            <div class="col">
+              <div class="card-body">
+                <% if incident.image.attached? %>
+                  <%= image_tag incident.image, class:"d-block mx-auto image-index" %>
+                <% else %>
+                  <%= image_tag "no_image.jpeg" , class:"d-block mx-auto image-index" %>
+                <% end %>
               </div>
-              <div class="card-text">
-                <small class="text-secondary">Content</small><br>
-                <%= incident.content %>
-              </div>
-              <div class="card-text">
-                <small class="text-secondary">Date</small><br>
-                <%= incident.date %>
-              </div>
-              <div class="card-text">
-                <small class="text-secondary">Place</small><br>
-                <%= incident.place.name %>
+            </div>
+            <div class="col">
+              <div class="card-body">
+                <div class="card-text">
+                  <small class="text-secondary">Title</small><br>
+                  <%= incident.title %>
+                </div>
+                <div class="card-text">
+                  <small class="text-secondary">Content</small><br>
+                  <%= incident.content %>
+                </div>
+                <div class="card-text">
+                  <small class="text-secondary">Date</small><br>
+                  <%= incident.date %>
+                </div>
+                <div class="card-text">
+                  <small class="text-secondary">Place</small><br>
+                  <%= incident.place.name %>
+                </div>
               </div>
             </div>
           </div>
           <%# レスポンス情報 %>
-          <div class="col-lg-6 d-flex justify-content-center">
-            <%= image_tag "no_image.jpeg", class:"image" %>
-            <div class="card-body">
-              <div class="card-text">
-                <small class="text-secondary">Content</small><br>
-                ---
+          <div class="col d-flex">
+            <div class="col">
+              <div class="card-body">
+                <%= image_tag "no_image.jpeg", class:"d-block mx-auto image-index" %>
               </div>
-              <div class="card-text">
-                <small class="text-secondary">Date</small><br>
-                ---
-              </div>
-              <div class="card-text">
-                <small class="text-secondary">Cost</small><br>
-                ---
+            </div>
+            <div class="col">
+              <div class="card-body">
+                <div class="card-text">
+                  <small class="text-secondary">Content</small><br>
+                  ---
+                </div>
+                <div class="card-text">
+                  <small class="text-secondary">Date</small><br>
+                  ---
+                </div>
+                <div class="card-text">
+                  <small class="text-secondary">Cost</small><br>
+                  ---
+                </div>
               </div>
             </div>
           </div>
