createアクションの作成

--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -60,7 +60,7 @@
             ---
           </div>
           <div class="d-grid gap-2 my-2 d-md-flex justify-content-md-end">
-            <%= link_to '投稿', new_response_path(@response), class:"btn btn-secondary", type:"button" %>
+            <%= link_to '投稿', new_incident_response_path(@incident, @response), class:"btn btn-secondary", type:"button" %>
           </div>
         </div>
       </div>
