--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -40,24 +40,28 @@
       <%# レスポンス情報 %>
       <div class="col">
         <div class="card-body">
-          <%= image_tag "no_image.jpeg", class:"d-block mx-auto image-show" %>
+          <% if @incident.image.attached? %>
+            <%= image_tag @incident.response.image, class:"d-block mx-auto image-show" %>
+          <% else %>
+            <%= image_tag "no_image.jpeg" , class:"d-block mx-auto image-show" %>
+          <% end %>
         </div>
         <div class="card-body mx-2">
           <div class="card-text">
             <small class="text-secondary">Date</small><br>
-            ---
+            <%= @incident.response.date %>
           </div>
           <div class="card-text">
             <small class="text-secondary">Title</small><br>
-            ---
+            <%= @incident.response.title %>
           </div>
           <div class="card-text">
             <small class="text-secondary">Content</small><br>
-            ---
+            <%= @incident.response.content %>
           </div>
           <div class="card-text">
             <small class="text-secondary">Cost</small><br>
-            ---
+            <%= @incident.response.cost %>円
           </div>
           <div class="d-grid gap-2 my-2 d-md-flex justify-content-md-end">
             <%= link_to '投稿', new_incident_response_path(@incident, @response), class:"btn btn-secondary", type:"button" %>
