--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -99,7 +99,7 @@
             </div>
             <div class="d-grid gap-2 my-2 d-md-flex justify-content-md-end">
               <% if current_user.id == @incident.response.user_id %>
-                <%= link_to '編集', edit_incident_response_path(@incident), class:"btn btn-secondary", type:"button" %>
+                <%= link_to '編集', edit_incident_response_path(@incident, @incident.response), class:"btn btn-secondary", type:"button" %>
                 <%= link_to '削除', "#", method: :delete, class:"btn btn-secondary", type:"button" %>
               <% end %>
             </div>
