--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -31,6 +31,10 @@
                   <small class="text-secondary">Place</small><br>
                   <%= incident.place.name %>
                 </div>
+                <div class="card-text">
+                  <small class="text-secondary">Contributor</small><br>
+                  <%= incident.user.name %>
+                </div>
               </div>
             </div>
           </div>
@@ -57,6 +61,10 @@
                   </div>
                   <div class="card-text">
                     <small class="text-secondary">Cost</small><br>
+                    ---
+                  </div>
+                  <div class="card-text">
+                    <small class="text-secondary">Contributor</small><br>
                     ---
                   </div>
                 </div>
@@ -88,6 +96,10 @@
                   <div class="card-text">
                     <small class="text-secondary">Cost</small><br>
                     <%= incident.response.cost %>円
+                  </div>
+                  <div class="card-text">
+                    <small class="text-secondary">Contributor</small><br>
+                    <%= incident.response.user.name %>
                   </div>
                 </div>
               </div>
