--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -128,9 +128,27 @@
       <div class="col">
         <div class="card-body mx-2">
           <div class="card-text">
-            <small class="text-secondary">Comment</small><br>
-            投稿日時 ユーザー名:コメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメント<br>
-            投稿日時 ユーザー名:コメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメント
+
+            <% if user_signed_in? %>
+              <%= form_with model: [@incident, @comment], local: true do |f|%>
+                <div class="field">
+                  <%= f.label :content, "コメント" %><br />
+                  <%= f.text_field :content, id:"comment_content" %>
+                </div>
+                <div class="actions">
+                  <%= f.submit "送信する", class: :form__btn  %>
+                </div>
+              <% end %>
+            <% end %>
+            <ul class="comments_lists">
+              <% @comments.each do |comment| %>
+                <li class="comments_list">
+                  <%= comment.content%>
+                  <%= comment.user.name %>
+                </li>
+              <% end %>
+            </ul>
+
           </div>
         </div>
       </div>
