--- a/app/views/responses/new.html.erb
+++ b/app/views/responses/new.html.erb
@@ -6,8 +6,8 @@
     <%= form_with model: [@incident, @response], local: true do |f| %>
 
       <div class="my-3">
-        <%= f.label :image %><br />
-        <%= f.file_field :image, class:"form-control my-3" %>
+        <%= f.label :image %><br/>
+        <%= f.file_field :image, class:"form-control mt-1" %>
       </div>
 
       <div class="my-3">
