--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,7 +26,9 @@ body {
 }
 
 .indispensable{
-  font-size: 5px;
-  padding: 1px;
-  margin-left: 7px;
+  font-size: 10px;
+  color: white;
+  padding: 2px;
+  margin-left: 8px;
+  border-radius: 2px;
 }
