ラベルの表記の変更

--- a/app/views/incidents/edit.html.erb
+++ b/app/views/incidents/edit.html.erb
@@ -12,7 +12,7 @@
       </div>
 
       <div class="my-3">
-        <%= f.label :表題 %><span class="bg-danger indispensable">必須</span><br/>
+        <%= f.label :タイトル %><span class="bg-danger indispensable">必須</span><br/>
         <%= f.text_field :title, class:"form-control mt-1", placeholder:"例）蛇口から水漏れしています" %>
       </div>
 
