--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -20,19 +20,19 @@
             <div class="col">
               <div class="card-body">
                 <div class="card-text">
-                  <small class="text-secondary">Date</small><br>
+                  <small class="text-secondary">日付</small><br>
                   <%= incident.date %>
                 </div>
                 <div class="card-text">
-                  <small class="text-secondary">Title</small><br>
+                  <small class="text-secondary">タイトル</small><br>
                   <%= incident.title %>
                 </div>
                 <div class="card-text">
-                  <small class="text-secondary">Place</small><br>
+                  <small class="text-secondary">場所</small><br>
                   <%= incident.place.name %>
                 </div>
                 <div class="card-text">
-                  <small class="text-secondary">Contributor</small><br>
+                  <small class="text-secondary">投稿者</small><br>
                   <%= incident.user.name %>
                 </div>
               </div>
@@ -51,22 +51,8 @@
               </div>
               <div class="col">
                 <div class="card-body">
-                  <div class="card-text">
-                    <small class="text-secondary">Date</small><br>
-                    ---
-                  </div>
-                  <div class="card-text">
-                    <small class="text-secondary">Title</small><br>
-                    ---
-                  </div>
-                  <div class="card-text">
-                    <small class="text-secondary">Cost</small><br>
-                    ---
-                  </div>
-                  <div class="card-text">
-                    <small class="text-secondary">Contributor</small><br>
-                    ---
-                  </div>
+                  <h4>未解決のインシデントです</h4>
+                  <span>解決後レスポンスを投稿してください</span>  
                 </div>
               </div>
             </div>
@@ -86,26 +72,25 @@
               <div class="col">
                 <div class="card-body">
                   <div class="card-text">
-                    <small class="text-secondary">Date</small><br>
+                    <small class="text-secondary">日付</small><br>
                     <%= incident.response.date %>
                   </div>
                   <div class="card-text">
-                    <small class="text-secondary">Title</small><br>
+                    <small class="text-secondary">タイトル</small><br>
                     <%= incident.response.title %>
                   </div>
                   <div class="card-text">
-                    <small class="text-secondary">Cost</small><br>
-                    <%= incident.response.cost %>円
+                    <small class="text-secondary">費用</small><br>
+                    <%= incident.response.cost %>
                   </div>
                   <div class="card-text">
-                    <small class="text-secondary">Contributor</small><br>
+                    <small class="text-secondary">投稿者</small><br>
                     <%= incident.response.user.name %>
                   </div>
                 </div>
               </div>
             </div>
             <%# /レスポンス投稿済みの場合 %>
-
           <% end %>
           <%# /レスポンス情報 %>
 
