--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -16,26 +16,25 @@
         </div>
         <div class="card-body mx-2">
           <div class="card-text">
-            <small class="text-secondary">Date</small><br>
+            <small class="text-secondary">日付</small><br>
             <%= @incident.date %>
           </div>
           <div class="card-text">
-            <small class="text-secondary">Title</small><br>
+            <small class="text-secondary">タイトル</small><br>
             <%= @incident.title %>
           </div>
           <div class="card-text">
-            <small class="text-secondary">Content</small><br>
+            <small class="text-secondary">内容</small><br>
             <%= @incident.content %>
           </div>
           <div class="card-text">
-            <small class="text-secondary">Place</small><br>
+            <small class="text-secondary">場所</small><br>
             <%= @incident.place.name %>
           </div>
           <div class="card-text">
-            <small class="text-secondary">Contributor</small><br>
+            <small class="text-secondary">投稿者</small><br>
             <%= @incident.user.name %>
           </div>
-
         </div>
       </div>
       <%# /インシデント情報 %>
@@ -50,26 +49,9 @@
           </div>
           <div class="card-body mx-2">
             <div class="card-text">
-              <small class="text-secondary">Date</small><br>
-              ---
+              <h4>未解決のインシデントです</h4>
+              <span>解決後レスポンスを投稿してください</span>
             </div>
-            <div class="card-text">
-              <small class="text-secondary">Title</small><br>
-              ---
-            </div>
-            <div class="card-text">
-              <small class="text-secondary">Content</small><br>
-              ---
-            </div>
-            <div class="card-text">
-              <small class="text-secondary">Cost</small><br>
-              ---
-            </div>
-            <div class="card-text">
-              <small class="text-secondary">Contributor</small><br>
-              ---
-            </div>
-
           </div>
         </div>
         <%# /レスポンス未投稿の場合 %>
@@ -86,26 +68,25 @@
           </div>
           <div class="card-body mx-2">
             <div class="card-text">
-              <small class="text-secondary">Date</small><br>
+              <small class="text-secondary">日付</small><br>
               <%= @incident.response.date %>
             </div>
             <div class="card-text">
-              <small class="text-secondary">Title</small><br>
+              <small class="text-secondary">タイトル</small><br>
               <%= @incident.response.title %>
             </div>
             <div class="card-text">
-              <small class="text-secondary">Content</small><br>
+              <small class="text-secondary">内容</small><br>
               <%= @incident.response.content %>
             </div>
             <div class="card-text">
-              <small class="text-secondary">Cost</small><br>
-              <%= @incident.response.cost %>円
+              <small class="text-secondary">費用</small><br>
+              <%= @incident.response.cost %>
             </div>
             <div class="card-text">
-              <small class="text-secondary">Contributor</small><br>
+              <small class="text-secondary">投稿者</small><br>
               <%= @incident.response.user.name %>
             </div>
-
           </div>
         </div>
         <%# /レスポンス投稿済みの場合 %>
@@ -152,7 +133,7 @@
             <% if user_signed_in? %>
               <%= form_with model: [@incident, @comment], local: true do |f| %>
                 <div>
-                  <small class="text-secondary">Comment</small><br>
+                  <small class="text-secondary">コメント</small><br>
                   <%= f.text_field :content, class:"form-control mt-1" %>
                 </div>
                 <div class="d-grid gap-2 my-2 d-md-flex">
